[tool.poetry]
name = "lol_pass"
version = "0.1.0"
description = "Automatic log in for league of legends"
authors = ["Jaume Delclòs Coll <cosarara97@gmail.com>"]
license = "X11"

[tool.poetry.dependencies]
python = "^3.5"
PyAutoGUI = "^0.9.41"
opencv-python = "^4.0"
numpy = "^1.16"
mss = "^4.0"
python-xlib = "^0.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
